--- a/components/projectPage/carousel.module.css
+++ b/components/projectPage/carousel.module.css
@@ -13,16 +13,11 @@
   margin-bottom: 0.5rem;
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-columns: 40px 1fr 40px;
-  grid-template-rows: 1fr 40px;
+  display: flex;
+  flex-direction: column;
 }
 
 .embla__container {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 4;
   display: flex;
   height: 100%;
 }
@@ -37,26 +32,30 @@
   box-sizing: border-box;
 }
 
+.embla__controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  background-color: rgba(0,0,0,0.5);
+  width: 100%;
+  border-radius: var(--border-radius-content);
+}
+
 .embla__button {
   border: none;
+  background-color: rgba(255, 255, 255, 0.8); /* Hintergrund der Buttons */
+  color: rgba(0, 0, 0, 0.9);
   border-radius: 50%;
-  aspect-ratio: 1;
-  cursor: pointer;
-  grid-row: 1;
-  z-index: 1;
-  align-self: center;
-  /* icon zentrieren */
-  display: flex; 
-  justify-content: center;  
+  width: 2rem; /* Button-Breite */
+  height: 2rem; /* Button-Höhe */
+  display: flex;
+  justify-content: center;
   align-items: center;
-}
-
-.prev {
-  grid-column: 1;
-}
-
-.next {
-  grid-column: 3;
+  cursor: pointer;
+  align-self: center;
 }
 
 .embla__dots {
@@ -64,19 +63,11 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
-  grid-column: 1 / span 3;
-  grid-row: 2;
-  /* ab hier Box um Dots*/
-  background: rgba(0, 0, 0, 0.9);
-  padding: 0.5rem;
-  border-radius: 10px;
-  width: 100%;
-  box-sizing: border-box;
 }
 
 .embla__dot {
   width: 1rem;
-  aspect-ratio: 1;
+  height: 1rem;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.3);
   border: none;
