--- a/components/navigation/button.module.css
+++ b/components/navigation/button.module.css
@@ -1,17 +1,22 @@
 .button {
-  font-size: 0.8em;
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  width: 2rem; 
+  height: 2rem; 
+  border-radius: 50%; 
   background-color: rgba(255, 255, 255, 0.9);
   color: black;
-  border: none;
-  border-radius: 50px;
-  padding: 10px 20px;
+  cursor: pointer; 
   margin-right: 10px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  /* Nur für den Link-Button */
+  align-self: center;
 }
 
 .button:hover {
   background-color: rgba(255, 255, 255, 1);
+}
+
+.button svg {
+  width: 1.5rem; /* Größe des Icons im Button */
+  height: 1.5rem;
 }
