#87 resized menu buttons

--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -56,7 +56,7 @@
 
 .viewsSection a svg {
   margin-right: 8px;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .viewsSection a:hover {
@@ -115,22 +115,21 @@
 }
 
 .iconButton {
-  background-color: #ccc;
+  background-color: rgba(204, 204, 204, 0.5);
   border: none;
   border-radius: 50%;
-  padding: 10px;
+  padding: 8px;
   cursor: pointer;
   margin: 8px;
   transition: background-color 0.3s ease;
 }
 
 .iconButton:hover {
-  background-color: #bbb;
+  background-color: rgba(187, 187, 187, 0.5);
 }
 
 .iconButton svg {
-  font-size: 0.8rem;
-  color: #333;
+  font-size: 1.2rem;
 }
 
 /* Styling für den Abschnitt der statischen Links */
