--- a/components/navigation/button.module.css
+++ b/components/navigation/button.module.css
@@ -1,15 +1,16 @@
 .button {
-  display: flex; 
+  display: flex;
   justify-content: center;
-  align-items: center; 
-  width: 2rem; 
-  height: 2rem; 
-  border-radius: 50%; 
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.9);
   color: black;
-  cursor: pointer; 
+  cursor: pointer;
   margin-right: 10px;
   align-self: center;
+  border: none;   
 }
 
 .button:hover {
