--- a/app/global.css
+++ b/app/global.css
@@ -1,11 +1,11 @@
 /* Variables */
 :root {
-  --border-radius-container: 1rem;
+  --border-radius-container: 1.5rem;
   --border-radius-content: calc(var(--border-radius-container) / 2);
-  --link-color: #4a90e2; /* ein etwas gedämpftes Blau */
-  --link-hover-color: #82cfff; /* heller bei Hover */
-  --background-color: #f0f0f0; /* Standard-Hintergrundfarbe im hellen Modus */
-  --text-color: #000000; /* Standard Textfarbe */
+  --link-color: #4a90e2;
+  --link-hover-color: #82cfff; 
+  --background-color: #f0f0f0; 
+  --text-color: #000000; 
 }
 
 
