--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -6,8 +6,8 @@
 }
 
 .menu {
-  width: 70px;
-  height: 70px;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.9);
   display: flex;
@@ -20,8 +20,8 @@
 
 .menu:hover,
 .menu.active {
-  width: 80px;
-  height: 80px;
+  width: 4rem;
+  height: 4rem;
   background-color: rgba(255, 255, 255, 1);
 }
 
