--- a/components/projectPage/projectPageList.module.css
+++ b/components/projectPage/projectPageList.module.css
@@ -23,10 +23,13 @@
   border-radius: var(--border-radius-container);
   background-color: rgba(0, 0, 0, 0.8);
   color: var(--text-color);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .navigation {
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
 }
 
 .pageTitle {
