--- a/components/projectPage/projectPage.module.css
+++ b/components/projectPage/projectPage.module.css
@@ -4,27 +4,29 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 10px;
   margin: auto;
 }
 
-.navigationButtons {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  padding: 1rem;
-  height: 60px;
-  flex-shrink: 0;
-}
-
 .article {
   display: flex;
+  flex-direction: column;
   flex-grow: 1;
   padding: 1rem;
   overflow: hidden;
   background-color: rgb(0,0,0,0.6);
   border-radius: var(--border-radius-container);
+}
+
+.navigationButtons {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  height: 2.5rem;
+  flex-shrink: 0;
+  padding: 0 2rem 1.25rem 0;
+  box-sizing: border-box;
 }
 
 .content {
