--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -78,9 +78,18 @@
   margin: 0;
 }
 
-.navMenu li {
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
+.hotSpot {
+  margin: 0.75em 0;
+}
+
+.hotSpot ul {
+  margin-left: 1em;
+  border-left: solid 1px rgba(204, 204, 204, 0.5);
+}
+
+.navMenu li a {
+  display: block;
+  padding: 0.25em 0.75em;
 }
 
 .navMenu a {
@@ -89,17 +98,13 @@
 }
 
 .navMenu ul li {
-  position: relative; 
+  position: relative;
 }
 
 .navMenu li a {
-  display: block; 
-  width: 100%; 
-  height: 100%; 
-}
-
-.navMenu ul li a.visited {
- 
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .navMenu ul li a.unvisited {
@@ -108,7 +113,7 @@
 
 .buttonContainer {
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 10px;
@@ -136,14 +141,14 @@
 .staticLinks {
   margin: 5px 0;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
 .staticLinks a {
-  font-weight: bold; 
-  padding: 10px; 
+  font-weight: bold;
+  padding: 10px;
   text-decoration: none;
-  border-bottom: 1px solid #ddd; 
+  border-bottom: 1px solid #ddd;
 }
 
 .legals {
