--- a/components/world/world.module.css
+++ b/components/world/world.module.css
@@ -3,12 +3,7 @@
   width: 100vw;
   top: 0;
   left: 0;
-  background:
-    url(wide.jpg) no-repeat center center,
-    #b2b0c6;
-  background-size:
-    auto 100%,
-    100%;
+  background: #b2b0c6;
 }
 
 .content {
@@ -36,20 +31,14 @@
   opacity: 1;
 }
 
-.loader,
-.loaderActive,
-.loaderPlaceholder,
-.loaderPlaceholderActive {
+.loaderPlaceholder {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   pointer-events: none;
-}
-
-.loaderPlaceholder,
-.loaderPlaceholderActive {
+  filter: blur(2vh);
   background:
     url(wide.jpg) no-repeat center center,
     #b2b0c6;
@@ -58,61 +47,69 @@
     100%;
 }
 
-.loaderPlaceholder {
+.loaderPlaceholderInactive {
   animation: fadeOut 1500ms ease-in;
   opacity: 0;
-}
-
-.loaderActive {
-  backdrop-filter: blur(2vh);
-}
-
-.loader {
-  animation: blur 1500ms ease-in;
   visibility: hidden;
+}
+
+.sceneLoading {
+  filter: blur(2vh);
+}
+
+.sceneLoaded {
+  animation: blur 1500ms ease-in;
 }
 
 @keyframes fadeOut {
   from {
+    visibility: visible;
     opacity: 1;
+    filter: blur(2vh);
   }
 
   to {
+    visibility: visible;
     opacity: 0;
+    filter: blur(0vh);
   }
 }
 
 @keyframes blur {
   from {
-    visibility: visible;
-    backdrop-filter: blur(2vh);
-    color: black;
+    filter: blur(2vh);
   }
 
   to {
-    visibility: visible;
-    backdrop-filter: blur(0vh);
-    color: transparent;
+    filter: blur(0vh);
   }
 }
 
 .progress,
 .bar {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 4px;
+  border-radius: 2px;
 }
 
 .progress {
   position: absolute;
-  top: 50%;
+  bottom: 50%;
   left: 50%;
   translate: -50% -50%;
-  outline: solid 2px white;
+  background: rgba(255, 255, 255, 0.25);
   box-sizing: border-box;
-  transition: opacity 100ms ease-out;
+  opacity: 0;
+  transition: opacity 500ms ease-out;
+}
+
+.progressActive {
+  opacity: 1;
 }
 
 .bar {
   background-color: white;
   transition: scale 100ms ease-out;
+  border-radius: 2px;
+  transform-origin: left;
 }
