--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -38,6 +38,7 @@
 .text {
   font-size: 1.1rem;
   padding: 1rem;
+  margin: 1rem;
   white-space: pre-wrap;
   background-color: rgba(0, 0, 0, 0.95);
   color: white;
