--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -1,7 +1,7 @@
 .figure {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   height: 100%;
   width: 100%;
@@ -15,10 +15,13 @@
   position: relative; /* Macht den Container zum Bezugspunkt für absolute Positionierung */
   width: 100%;
   height: 100%;
+  flex-grow: 1;
   display: flex;
   flex-direction: column; 
   justify-content: center; 
   align-items: center;
+  overflow-y: auto; 
+  overflow-x: hidden;
 }
 
 
@@ -38,7 +41,6 @@
 .text {
   font-size: 1.1rem;
   padding: 1rem;
-  margin: 1rem;
   white-space: pre-wrap;
   background-color: rgba(0, 0, 0, 0.95);
   color: white;
@@ -97,6 +99,6 @@
   text-align: center;
   color: rgba(255, 255, 255, 0.7);
   position: relative;
+  width: 100%;
+  box-sizing: border-box;
 }
-
-
