--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -2,12 +2,13 @@
 .boxContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   min-height: 100vh; 
   margin: 0; 
-  padding: 20px; 
-  background-color: transparent;
+  padding: 20px;
+  background-color: rgba(0,0,0,0.3);
+  position: relative;
 }
 
 /* Container für die Textformatierung */
@@ -15,20 +16,23 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  margin: 2rem auto;
-  width: 80%;
-  max-width: 1200px;
+  margin: auto;
+  width: fit-content;
+  max-width: 90vw;
   text-align: justify;
   border-radius: var(--border-radius-container);
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.4);
   color: var(--text-color);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  align-self: center;
 }
 
 .navigation {
   display: flex; 
-  flex-direction: row; 
-  justify-content: right;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 0 2.25rem 1.25rem 0;
 }
 
 .bold {
@@ -98,7 +102,7 @@
 
 @media (max-width: 600px) {
   .textContainer {
-    width: 95vw; 
+    width: 100%; 
   }
 
   .title {
