--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -31,6 +31,8 @@
   display: flex; 
   flex-direction: row;
   justify-content: flex-end;
+  position: sticky;
+  top: 1.25rem;
   width: 100%;
   padding: 0 2.25rem 1.25rem 0;
 }
