--- a/components/projectPage/projectPage.module.css
+++ b/components/projectPage/projectPage.module.css
@@ -11,23 +11,23 @@
   overflow: hidden;
 }
 
+.navigationButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: sticky;
+  top: 0.5rem;
+  width: 100%;
+  padding: 0 3rem 1.25rem 0;
+}
+
 .article {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 1rem;
+  padding: 0.5rem;
   overflow: hidden;
   border-radius: var(--border-radius-container);
-}
-
-.navigationButtons {
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  height: 2.5rem;
-  flex-shrink: 0;
-  padding: 0 2rem 1.25rem 0;
-  box-sizing: border-box;
 }
 
 .content {
