--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -20,14 +20,14 @@
 
 .menu:hover,
 .menu.active {
-  width: 4rem;
-  height: 4rem;
+  width: 3.25rem;
+  height: 3.25rem;
   background-color: rgba(255, 255, 255, 1);
 }
 
 .navMenu {
   position: fixed;
-  top: 100px;
+  top: 4.25rem;
   right: 10px;
   background-color: white;
   border-radius: 8px;
