--- a/components/projectPage/projectPage.module.css
+++ b/components/projectPage/projectPage.module.css
@@ -1,33 +1,33 @@
 .pageContainer {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
-  justify-content: flex-start;
   padding: 10px;
   margin: auto;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(4px);
+  overflow: hidden;
+}
+
+.navigationButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: sticky;
+  top: 0.5rem;
+  width: 100%;
+  padding: 0 3rem 1.25rem 0;
 }
 
 .article {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 1rem;
+  padding: 0.5rem;
   overflow: hidden;
   border-radius: var(--border-radius-container);
-}
-
-.navigationButtons {
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  height: 2.5rem;
-  flex-shrink: 0;
-  padding: 0 2rem 1.25rem 0;
-  box-sizing: border-box;
 }
 
 .content {
@@ -111,7 +111,9 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optionaler Schatten */
   overflow: auto;
   overflow-wrap: break-word; /* Umbrüche bei langen Wörtern */
-  min-width: 300px;
+  width: fit-content;
+  max-width: 100%;
+  min-width: 30vw;
 }
 
 .showcase {
@@ -138,7 +140,8 @@
 
 @media (max-width: 768px) {
   .tooltip {
-    max-width: 80vw;
+    max-width: 60vw;
+    min-width: unset;
   }
   
   .content {
