--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  min-height: 100vh;
   padding: 10px;
   margin: auto;
   background-color: rgba(0,0,0,0.4);
