#130 first alternative listView with kind of waves

--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -22,7 +22,7 @@
 }
 
 /* Container für die Textformatierung */
-.textContainer {
+.projectContainer {
   display: flex;
   flex-direction: column;
   padding: 2rem;
