--- a/components/staticPages/projectList.module.css
+++ b/components/staticPages/projectList.module.css
@@ -108,3 +108,14 @@
   z-index: -1; 
 }
 
+.title {
+  position: absolute; /* Positioniere den Titel absolut */
+  bottom: 2rem; /* Abstand vom unteren Rand (kann angepasst werden) */
+  left: 50%; /* Horizontal zentrieren */
+  transform: translateX(-50%); /* Zentrieren relativ zur Breite */
+  color: var(--text-color); /* Textfarbe, optional anpassen */
+  font-size: 1rem; /* Schriftgröße, optional anpassen */
+  text-align: center; /* Text zentrieren */
+  z-index: 1; /* Über anderen Inhalten anzeigen */
+}
+
