--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -12,20 +12,23 @@
 }
 
 .contentContainer {
-  position: relative; /* Macht den Container zum Bezugspunkt für absolute Positionierung */
+  position: relative;
+  /* Macht den Container zum Bezugspunkt für absolute Positionierung */
   width: 100%;
   height: 100%;
   flex-grow: 1;
   display: flex;
-  flex-direction: column; 
-  justify-content: center; 
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  overflow-y: auto; 
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
 
-.video, .audio, .iFrame {
+.video,
+.audio,
+.iFrame {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
@@ -53,9 +56,18 @@
 }
 
 .audio {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template: 1fr / 1fr;
+  justify-items: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  & * {
+    grid-row: 1;
+    grid-column: 1;
+  }
 }
 
 .websiteContainer {
@@ -76,21 +88,22 @@
 }
 
 .expandButton {
-  position: absolute; 
-  bottom: 10px; 
-  right: 10px; 
-  background-color: rgb(64, 64, 64, 0.7); 
-  color: white; 
-  padding: 10px 15px; 
-  border: none; 
-  border-radius: 5px; 
-  cursor: pointer; 
-  z-index: 1; /* Stellt sicher, dass der Button über dem iFrame liegt */
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: rgb(64, 64, 64, 0.7);
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 1;
+  /* Stellt sicher, dass der Button über dem iFrame liegt */
   transition: background-color 0.3s ease;
 }
 
 .expandButton:hover {
-  background-color: rgba(64, 64, 64, 0.9); 
+  background-color: rgba(64, 64, 64, 0.9);
 }
 
 .description {
