#130 fix missing style-name textContainer

--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -22,7 +22,7 @@
 }
 
 /* Container für die Textformatierung */
-.projectContainer {
+.textContainer {
   display: flex;
   flex-direction: column;
   padding: 2rem;
