--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -9,7 +9,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,14 +22,14 @@
 .menu.active {
   width: 3.25rem;
   height: 3.25rem;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .navMenu {
   position: fixed;
   top: 4.25rem;
   right: 10px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: max-content;
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  background-color: #f8f8f8;
+  background-color: rgba(248, 248, 248, 0.8);
   border-bottom: 1px solid #ddd;
 }
 
@@ -84,7 +84,7 @@
 
 .hotSpot ul {
   margin-left: 1em;
-  border-left: solid 1px rgba(204, 204, 204, 0.5);
+  border-left: 1.5px solid #ddd;
 }
 
 .navMenu li a {
@@ -108,7 +108,11 @@
 }
 
 .navMenu ul li a.unvisited {
-  color: rgb(145, 151, 232); /* Farbe für unbesuchte Projekte */
+  color: var(--link-color)
+}
+
+.navMenu ul li a.unvisited:hover {
+  color: var(--link-hover-color)
 }
 
 .buttonContainer {
@@ -120,17 +124,17 @@
 }
 
 .iconButton {
-  background-color: rgba(204, 204, 204, 0.5);
+  background-color: rgba(255, 255, 255, 0.8);
   border: none;
   border-radius: 50%;
   padding: 8px;
   cursor: pointer;
   margin: 8px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.1s ease;
 }
 
 .iconButton:hover {
-  background-color: rgba(187, 187, 187, 0.5);
+  background-color: var(--link-hover-color)
 }
 
 .iconButton svg {
@@ -155,7 +159,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f8f8f8;
+  background-color: rgba(248, 248, 248, 0.8);
   padding: 10px;
 }
 
