--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -9,7 +9,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,14 +22,14 @@
 .menu.active {
   width: 3.25rem;
   height: 3.25rem;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .navMenu {
   position: fixed;
   top: 4.25rem;
   right: 10px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 1);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: max-content;
@@ -84,7 +84,7 @@
 
 .hotSpot ul {
   margin-left: 1em;
-  border-left: 1.5px solid #ddd;
+  border-left: solid 1px rgba(204, 204, 204, 0.5);
 }
 
 .navMenu li a {
@@ -124,7 +124,7 @@
 }
 
 .iconButton {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(204, 204, 204, 0.8);
   border: none;
   border-radius: 50%;
   padding: 8px;
