--- a/app/global.css
+++ b/app/global.css
@@ -12,6 +12,15 @@
   --link-hover-color: #82cfff; 
   --background-color: #f0f0f0; 
   --text-color: #000000;
+  --primary-font: "Noto Sans Mono", "Fragment Mono", "Anonymous Pro", "B612 Mono", system-ui, sans-serif;
+  --font-weight-thin: 100;
+  --font-weight-extralight: 200;
+  --font-weight-light: 300;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --font-weight-extrabold: 800;
 }
 
 
@@ -41,6 +50,7 @@ https://www.joshwcomeau.com/css/custom-css-reset/#eight-root-stacking-context-9
   4. Improve text rendering
 */
 body {
+  font-family: var(--primary-font);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -99,22 +109,27 @@ h6 {
 
 h1 {
   font-size: 4em;
+  font-weight: var(--font-weight-bold);
 }
 
 h2 {
   font-size: 3em;
+  font-weight: var(--font-weight-semibold);
 }
 
 h3 {
   font-size: 2em;
+  font-weight: var(--font-weight-semibold);
 }
 
 h4 {
   font-size: 1.75em;
+  font-weight: var(--font-weight-semibold);
 }
 
 h5 {
   font-size: 1.5em;
+  font-weight: var(--font-weight-medium);
 }
 
 h6 {
