--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
   padding: 10px;
   margin: auto;
   background-color: rgba(0,0,0,0.4);
