--- a/components/list/projectList.module.css
+++ b/components/list/projectList.module.css
@@ -37,13 +37,18 @@
   flex-direction: column;
   align-items: center;
   margin: 3rem;
+  padding: 1rem;
   text-align: center;
   text-decoration: none;
+  /*
+  background-color: rgba(255, 255, 2555, 0.1);
+  border-radius: var(--border-radius-content);
+   */
 }
 
 .projectPoint {
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
   border-radius: 50%;
   /*border-radius: 50% 50% 0 0;*/ /*Tor statt Punkt*/
   display: flex;
@@ -61,14 +66,12 @@
 
 .projectTitle {
   margin-top: 1rem;
-  font-size: 1rem;
-  font-weight: bold;
   text-align: center;
 }
 
 .projectAuthor {
-  font-size: 0.85rem;
   margin-top: 0.5rem;
+  font-weight: var(--font-weight-light);
 }
 
 .waveContainer {
