--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -109,6 +109,8 @@
 .description {
   margin-top: 0.5rem;
   font-size: 0.9rem;
+  font-weight: var(--font-weight-light);
+  font-style: italic;
   text-align: center;
   color: rgba(255, 255, 255, 0.7);
   position: relative;
