--- a/app/global.css
+++ b/app/global.css
@@ -185,3 +185,37 @@ a:hover {
   }
 
 }
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2.25em; 
+  }
+
+  h2 {
+    font-size: 1.75em; 
+  }
+
+  h3 {
+    font-size: 1.5em; 
+  }
+
+  h4 {
+    font-size: 1.25em; 
+  }
+
+  h5 {
+    font-size: 1.1em; 
+  }
+
+  h6 {
+    font-size: 1em; 
+  }
+
+  p {
+    font-size: 1em; 
+  }
+
+  blockquote {
+    font-size: 1em; 
+  }
+}
