--- a/app/global.css
+++ b/app/global.css
@@ -1,11 +1,12 @@
 /* Variables */
 :root {
-  --border-radius-container: 1.5rem;
-  --border-radius-content: calc(var(--border-radius-container) / 2);
+  --border-radius-content: 0.75rem;
+  --border-radius-container: var(--border-radius-container);
   --link-color: #4a90e2;
   --link-hover-color: #82cfff; 
   --background-color: #f0f0f0; 
-  --text-color: #000000; 
+  --text-color: #000000;
+  color-scheme: dark;
 }
 
 
