--- a/components/projectPage/projectPage.module.css
+++ b/components/projectPage/projectPage.module.css
@@ -4,11 +4,12 @@
   justify-content: flex-start;
   height: 100vh;
   width: 100vw;
-  padding: 10px;
+  padding: 1rem;
   margin: auto;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(4px);
   overflow: hidden;
+  gap: 1rem;
 }
 
 .navigationButtons {
@@ -16,16 +17,17 @@
   flex-direction: row;
   justify-content: flex-end;
   position: sticky;
-  top: 0.5rem;
   width: 100%;
-  padding: 0 3rem 1.25rem 0;
+  height: 3rem;
+  padding: 0 3rem 0;
+  flex: 0 0 auto;
+  align-items: center;
 }
 
 .article {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 0.5rem;
   overflow: hidden;
   border-radius: var(--border-radius-container);
 }
