--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -70,6 +70,31 @@
   }
 }
 
+.playButton {
+  background: black;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  cursor: pointer;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 200ms 1s ease-out, scale 200ms ease-out;
+  opacity: 0;
+  scale: 1;
+}
+
+.audio:hover .playButton,
+.playButtonPaused {
+  transition: opacity 200ms ease-out, scale 200ms ease-out;
+  opacity: 1;
+}
+
+.playButton:hover {
+  scale: 1.1;
+}
+
 .websiteContainer {
   position: relative;
   width: 100%;
