--- a/components/navigation/menu.module.css
+++ b/components/navigation/menu.module.css
@@ -63,8 +63,7 @@
   color: var(--link-color)
 }
 
-.projects {
-}
+.projects {}
 
 .hotSpot {
   cursor: pointer;
@@ -95,6 +94,7 @@
 .navMenu a {
   text-decoration: none;
   color: black;
+  font-weight: normal;
 }
 
 .navMenu ul li {
@@ -105,6 +105,7 @@
   display: block;
   width: 100%;
   height: 100%;
+  font-weight: normal;
 }
 
 .navMenu ul li a.unvisited {
