--- a/app/global.css
+++ b/app/global.css
@@ -1,9 +1,3 @@
-/*Fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=B612+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
 /* Variables */
 :root {
   --border-radius-container: 1.5rem;
@@ -12,7 +6,8 @@
   --link-hover-color:#82cfff ; 
   --background-color: #f0f0f0; 
   --text-color: #000000;
-  --primary-font: "Noto Sans Mono", "Fragment Mono", "Anonymous Pro", "B612 Mono", system-ui, sans-serif;
+  --primary-font: var(--font-kotta-one), system-ui, sans-serif;
+  --secondary-font: var(--font-jacquard-24), fantasy, sans-serif;
   --font-weight-thin: 100;
   --font-weight-extralight: 200;
   --font-weight-light: 300;
@@ -111,7 +106,7 @@ blockquote {
    Customizations
    ==================== */
 :root {
-  font-family: var(--font-kotta-one), system-ui, sans-serif;
+  font-family: var(--primary-font), system-ui, sans-serif;
   font-weight: normal;
   line-height: 100%;
 }
@@ -148,7 +143,7 @@ h6 {
 }
 
 h1, h2, h3, h4, h5, h6, b, strong, i, em {
-  font-family: var(--font-jacquard-24);
+  font-family: var(--secondary-font);
   line-height: 100%;
   margin: 8px 0;
 }
